# LLMOCR

./: .gitignore  DOWNLOAD_TIME_GUIDE.md  GUI_COMPARISON.md  QUICKSTART_GUI.md  README-mac.md  README.md  mac_bootstrap.sh  requirements.txt  run_gui.bat  run_gui.sh
benchmarks/: continuous_learning.py  example_workflow.py  run_bench.py  test_pipeline.py
datasets/: README.md
datasets/scripts/: analyze_difficulty.py  clean_data.py  create_splits.py  download_aihub.py  download_synthdog_ko.py
gui/: DATASET_MANAGEMENT_GUIDE.md  DESKTOP_README.md  PROGRESS_FEATURE.md  QUICK_USAGE.md  README.md  README_v2.md  UI_IMPROVEMENTS.md  desktop_app.py  streamlit_app.py
ocr-baselines/: .gitignore  README.md  pyproject.toml
ocr-baselines/configs/: donut_lora_mac.yaml  trocr_lora_mac.yaml  trocr_qlora_cloud.yaml
ocr-baselines/data/: README.md  train.jsonl  val.jsonl
ocr-baselines/export/: README.md  __init__.py  export_trocr_onnx.py  quantize_onnx.py
ocr-baselines/serve/: __init__.py  onnx_app.py
ocr-baselines/src/: __init__.py  cli.py  eval.py
ocr-baselines/src/pipelines/: __init__.py  donut_pipeline.py  onnx_pipeline.py  paddleocr_pipeline.py  pix2struct_pipeline.py  trocr_pipeline.py
ocr-baselines/src/server/: __init__.py  app.py
ocr-baselines/src/train/: __init__.py  data_loader.py  train_donut_lora.py  train_trocr_lora.py
ocr-baselines/tests/: __init__.py  generate_sample_images.py  test_cli.py
ocr-baselines/tests/data_samples/: README.md  invoice_ko.txt  receipt_ko.txt
tools/: __init__.py  demo_gui.py
tools/audit_logging/: __init__.py  audit_logger.py
tools/error_analysis/: __init__.py  error_analyzer.py
utils/: __init__.py
utils/visualization/: __init__.py  bbox_visualizer.py
