[project]
name = "ocr-baselines"
version = "0.1.0"
description = "Multi-model OCR baseline comparison for Korean documents"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "datasets>=2.14.0",
    "peft>=0.5.0",
    "accelerate>=0.21.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "optimum[exporters]>=1.13.0",
    "jiwer>=3.0.0",
    "python-Levenshtein>=0.21.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "python-multipart>=0.0.6",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
